Added dynamic OG images at the edge
