# app/api/weather/route.ts
@@ -1,5 +1,6 @@
 import { NextRequest, NextResponse } from "next/server";
 import { geolocation } from "@vercel/edge";
+import { getWeatherData } from "@/app/lib/utils";
 
 export const config = {
   runtime: "edge",
@@ -9,13 +10,13 @@ export async function GET(req: NextRequest) {
   let location = req.nextUrl.searchParams.get("location");
   if (!location) {
     const { city } = geolocation(req);
-    console.log(city, geolocation(req));
     location = city || "San Francisco";
   }
 
-  const response = await fetch(
-    `http://api.weatherapi.com/v1/current.json?key=${process.env.WEATHER_API_KEY}&q=${location}&aqi=no`
-  ).then((res) => res.json());
+  const response = await getWeatherData(location);
 
-  return NextResponse.json(response);
+  return NextResponse.json({
+    ...response,
+    infoLink: `https://weathergpt.vercel.app/${location}`,
+  });
 }
